tests/bad_case.b
main(a, b) {
    extrn main;

    switch (a) {
        case "hello":
        case '*c': main(2, 1);
        b;
    }

    case 1: case 69: main(a, a);
}
